force-app/main/default/src/objects/HealthCloudGA__HousingAssessment__c/fields/HealthCloudGA__Account__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Housing Assessments</relationshipLabel>
    <relationshipName>HousingAssessments</relationshipName>
    <type>Lookup</type>
</CustomField>