force-app/main/default/src/objects/HealthCloudGA__HousingAssessment__c/fields/HealthCloudGA__AssessmentDate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AssessmentDate__c</fullName>
    <description>Date of the housing assessment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assessment Date</label>
    <type>DateTime</type>
</CustomField>