force-app/main/default/src/objects/HealthCloudGA__HousingAssessment__c/fields/HealthCloudGA__CanPrepareFoodSafely__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CanPrepareFoodSafely__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a person can prepare food.</description>
    <label>Can prepare food safely</label>
    <type>Checkbox</type>
</CustomField>