force-app/main/default/src/objects/HealthCloudGA__HousingAssessment__c/fields/HealthCloudGA__CanQuarantine__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CanQuarantine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a person can quarantine effectively.</description>
    <label>Can quarantine</label>
    <type>Checkbox</type>
</CustomField>