force-app/main/default/src/objects/HealthCloudGA__HousingAssessment__c/fields/HealthCloudGA__Dwelling__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Dwelling__c</fullName>
    <description>Type of residence for the person.</description>
    <label>Dwelling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Recreational Vehicle or Mobile Home</fullName>
            </value>
            <value>
                <fullName>Long-Term Care Facility</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
            <value>
                <fullName>Skilled Nursing Facility</fullName>
            </value>
            <value>
                <fullName>Board and Care or Assisted Living Facility</fullName>
            </value>
            <value>
                <fullName>Multi-Family Dwelling</fullName>
            </value>
            <value>
                <fullName>Hotel or Motel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>