force-app/main/default/src/objects/HealthCloudGA__HousingAssessment__c/fields/HealthCloudGA__HasPrivateBathroom__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__HasPrivateBathroom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a person has access to a private bathroom.</description>
    <label>Has private bathroom</label>
    <type>Checkbox</type>
</CustomField>