force-app/main/default/src/objects/HealthCloudGA__HousingAssessment__c/fields/HealthCloudGA__IsHomeless__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__IsHomeless__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether are person has a place to live.</description>
    <label>Is homeless</label>
    <type>Checkbox</type>
</CustomField>