force-app/main/default/src/objects/HealthCloudGA__HousingAssessment__c/fields/HealthCloudGA__QuarantineEndDate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__QuarantineEndDate__c</fullName>
    <description>End date of the quarantine period.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Quarantine End Date</label>
    <type>DateTime</type>
</CustomField>