force-app/main/default/src/objects/HealthCloudGA__HousingAssessment__c/fields/HealthCloudGA__QuarantineLocation__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__QuarantineLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the location where the person is to quarantine.</description>
    <label>Quarantine Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Housing Assessments</relationshipLabel>
    <relationshipName>HousingAssessments</relationshipName>
    <type>Lookup</type>
</CustomField>