force-app/main/default/src/objects/HealthCloudGA__HousingAssessment__c/fields/HealthCloudGA__QuarantineStartDate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__QuarantineStartDate__c</fullName>
    <description>Start date of the quarantine period.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Quarantine Start Date</label>
    <type>DateTime</type>
</CustomField>